--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/x-icon" href="./assets/imgs/logos/logoOjo.png">
 
     <!-- ==============Css para la pagina principal============== -->
-    <link href="/Styles/index.css" rel="stylesheet">
+    <link href="/styles/index.css" rel="stylesheet">
 
 
 </head>
