--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="col-md-5 p-lg-5 my-5 text-start">
                 <h1 class="titulo">OJOS<br>DE<br>GATO</h1>
                 <p class="slogan" id="textoBienvenida">DESTACA CON MIRADAS<br>IRRESISTIBLES</p>
-                <a class="boton" href="./pages/cita.html">AGENDA CON ELEGANCIA</a>
+                <a class="boton" href="/pages/cita.html">AGENDA CON ELEGANCIA</a>
             </div>
         </div>
     </section>
