--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/x-icon" href="./assets/imgs/logos/logoOjo.png">
 
     <!-- ==============Css para la pagina principal============== -->
-    <link href="/styles/index.css" rel="stylesheet">
+    <link href="/Styles/index.css" rel="stylesheet">
 
 
 </head>
@@ -32,7 +32,7 @@
             <div class="col-md-5 p-lg-5 my-5 text-start">
                 <h1 class="titulo">OJOS<br>DE<br>GATO</h1>
                 <p class="slogan" id="textoBienvenida">DESTACA CON MIRADAS<br>IRRESISTIBLES</p>
-                <a class="boton" href="/pages/cita.html">AGENDA CON ELEGANCIA</a>
+                <a class="boton" href="/Pages/cita.html">AGENDA CON ELEGANCIA</a>
             </div>
         </div>
     </section>
@@ -42,7 +42,7 @@
         <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
             <!-- ---Servicios--- -->
             <div class="mr-md-3 pt-3 px-3 pt-md-5 px-md-5 m-md-3 py-5 servicios"><a class="link"
-                    href="./pages/servicios.html">
+                    href="/pages/servicios.html">
                     <div class="my-3 py-3">
                         <h2 class="opcion">SERVICIOS</h2>
                         <p class="h3">EXPERIENCIA Y CALIDAD</p>
@@ -51,7 +51,7 @@
                 </a></div>
             <!-- ---Productos--- -->
             <div class="mr-md-3 pt-3 px-3 pt-md-5 px-md-5 m-md-3 py-5 productos"><a class="link"
-                    href="./pages/productos.html">
+                    href="/pages/productos.html">
                     <div class="my-3 p-3">
                         <h2 class="opcion">PRODUCTOS</h2>
                         <p class="h3">DESCUBRE LA EXCELENCIA EN NUESTROS PRODUCTOS</p>
