--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,7 +4,7 @@
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-        <link rel="stylesheet" href="/Styles/productos.css">
+        <link rel="stylesheet" href="/styles/productos.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Fav icon -->
@@ -227,7 +227,7 @@
 <!----------------------------------Fin footer------------------------------------------------->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"crossorigin="anonymous"></script>
-  <script src="../src/Navbar.js"></script>
+  <script src="/pages/Navbar.html"></script>
   <script src="../src/Footer.js"></script>
 <script src="/src/carrito.js"></script>
 
