--- a/pages/información_empresa.html
+++ b/pages/información_empresa.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Styles/informacion_empresa.css">
-    <link rel="stylesheet" href="/Styles/Navbar.css">
-    <link rel="stylesheet" href="/Styles/Footer.css">
+    <link rel="stylesheet" href="/styles/informacion_empresa.css">
+    <link rel="stylesheet" href="/styles/Navbar.css">
+    <link rel="stylesheet" href="/styles/Footer.css">
     <link rel="icon" href="/assets/imgs/logoOjo.png" sizes="32x32" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
