--- a/pages/garantias.html
+++ b/pages/garantias.html
@@ -4,7 +4,7 @@
     <link rel="icon" href="../assets/imgs/logos/logoOjo.png" sizes="32x32" type="image/png">    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Styles/garantias.css">
+    <link rel="stylesheet" href="/styles/garantias.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lustria&family=Tsukimi+Rounded:wght@500&display=swap" rel="stylesheet">
@@ -76,6 +76,6 @@
 
 
     <script src="/src/Navbar.js"></script>
-    <script src="../src/footer.js"></script>
+    <script src="/src/Footer.js"></script>
 </body>
 </html>
