--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
-    <script src="./src/index.js"></script>
-    <!-- <script src="./src/navbar.js"></script> -->
-    <script src="./src/footer.js"></script>
+    <script src="/src/index.js"></script>
+    <script src="/src/NavbarIndex.js"></script>
+    <script src="/src/Footer.js"></script>
     <script src="./src/login.js"></script>
 
 
