--- a/pages/lista_pedidos_usuario.html
+++ b/pages/lista_pedidos_usuario.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="/Styles/lista_pedidos_usuario.css">
-    <link rel="stylesheet" href="/Styles/CuentaUsuario.css">
+    <link rel="stylesheet" href="/styles/lista_pedidos_usuario.css">
+    <link rel="stylesheet" href="/styles/CuentaUsuario.css">
     <link rel="icon" href="../assets/imgs/logos/logoOjo.png" sizes="32x32" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
