Se arreglan enlaces con un :3 iber seal of aproval

--- a/pages/cuenta_usuario.html
+++ b/pages/cuenta_usuario.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <link rel="stylesheet" href="/Styles/CuentaUsuario.css">  
+  <link rel="stylesheet" href="/styles/CuentaUsuario.css">  
   <!-- Fav icon -->
   <link rel="icon" type="image/x-icon" href="../assets/imgs/logos/logoOjo.png">
 
@@ -53,7 +53,7 @@
           <div class="fw-bold"><span class="subtitulo">Mis Datos</span></div>
           <span>Modifica tus datos de usuario</span>
         </div>
-        <a class="badge bg-dark rounded-pill text-decoration-none" href="/Pages/datos_usuario.html">></a>
+        <a class="badge bg-dark rounded-pill text-decoration-none" href="/pages/datos_usuario.html">></a>
       </li>
 
       <li class="list-group-item d-flex justify-content-between align-items-start">
@@ -64,7 +64,7 @@
           <div class="fw-bold"><span class="subtitulo">Pedidos</span></div>
           <span>Historial de pedidos</span>
         </div>
-        <a class="badge bg-dark rounded-pill text-decoration-none" href="/Pages/lista_pedidos_usuario.html">></a>      
+        <a class="badge bg-dark rounded-pill text-decoration-none" href="/pages/lista_pedidos_usuario.html">></a>      
       </li>
 
       <li class="list-group-item d-flex justify-content-between align-items-start">
@@ -75,7 +75,7 @@
           <div class="fw-bold"><span class="subtitulo">Rastrear</span></div>
           Rastrea tus pedidos
         </div>
-        <a class="badge bg-dark rounded-pill text-decoration-none" href="/Pages/estatus_envio.html">></a>      
+        <a class="badge bg-dark rounded-pill text-decoration-none" href="/pages/estatus_envio.html">></a>      
       </li>
 
       <li class="list-group-item d-flex justify-content-between align-items-start">
@@ -86,7 +86,7 @@
           <div class="fw-bold"><span class="subtitulo">Tarjetas</span></div>
           Administra tus métodos de pago
         </div>
-        <a class="badge bg-dark rounded-pill text-decoration-none" href="/Pages/lista_tarjetas_usuario.html">></a>      
+        <a class="badge bg-dark rounded-pill text-decoration-none" href="/pages/lista_tarjetas_usuario.html">></a>      
       </li>
 
       <li class="list-group-item d-flex justify-content-between align-items-start">
@@ -97,7 +97,7 @@
           <div class="fw-bold"><span class="subtitulo">Direcciones</span></div>
           Administra tus direcciones de entrega
         </div>
-        <a class="badge bg-dark rounded-pill text-decoration-none" href="/Pages/lista_direcciones_usuario.html">></a>      
+        <a class="badge bg-dark rounded-pill text-decoration-none" href="/pages/lista_direcciones_usuario.html">></a>      
       </li>
 
       <li class="list-group-item d-flex justify-content-between align-items-start">
@@ -108,7 +108,7 @@
           <div class="fw-bold"><span class="subtitulo">Citas</span></div>
           Agenda una cita
         </div>
-        <a class="badge bg-dark rounded-pill text-decoration-none" href="/Pages/lista_citas_usuario.html">></a>      
+        <a class="badge bg-dark rounded-pill text-decoration-none" href="/pages/lista_citas_usuario.html">></a>      
       </li>
       
     </ol>
