--- a/pages/estatus_envio.html
+++ b/pages/estatus_envio.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lustria&family=Tsukimi+Rounded:wght@500&display=swap" rel="stylesheet">
     
 
-    <link rel="stylesheet" href="../Styles/estatus_envio.css">
+    <link rel="stylesheet" href="../styles/estatus_envio.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estatus de envío</title>
