--- a/pages/datos_usuario.html
+++ b/pages/datos_usuario.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-  <link rel="stylesheet" href="/Styles/CuentaUsuario.css">
-  <link rel="stylesheet" href="/Styles/Navbar.css">
-  <link rel="stylesheet" href="/Styles/datos_usuario.css">
+  <link rel="stylesheet" href="/styles/CuentaUsuario.css">
+  <link rel="stylesheet" href="/styles/Navbar.css">
+  <link rel="stylesheet" href="/styles/datos_usuario.css">
   <link rel="icon" href="../assets/imgs/logos/logoOjo.png" sizes="32x32" type="image/png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
