:3 iber seal of aproval

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     <script src="/src/index.js"></script>
     <script src="/src/NavbarIndex.js"></script>
     <script src="/src/Footer.js"></script>
-    <script src="./src/login.js"></script>
+    <!-- <script src="./src/login.js"></script> -->
 
 
 </body>
