--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="col-md-5 p-lg-5 my-5 text-start">
                 <h1 class="titulo">OJOS<br>DE<br>GATO</h1>
                 <p class="slogan" id="textoBienvenida">DESTACA CON MIRADAS<br>IRRESISTIBLES</p>
-                <a class="boton" href="/Pages/cita.html">AGENDA CON ELEGANCIA</a>
+                <a class="boton" href="/pages/cita.html">AGENDA CON ELEGANCIA</a>
             </div>
         </div>
     </section>
@@ -64,7 +64,7 @@
         <div class="d-md-flex flex-md-equal my-md-3 pl-md-3 text-center">
             <!-- ---Garantías--- -->
             <div class="mr-md-3 pt-3 px-3 pt-md-5 px-md-5 m-md-3 py-5 garantias"><a class="link"
-                    href="./pages/garantias.html">
+                    href="/pages/garantias.html">
                     <div class="my-3 p-3">
                         <h2 class="opcion">GARANTÍAS</h2>
                         <p class="h3">ESTAMOS CONTIGO</p>
@@ -74,7 +74,7 @@
             </div>
             <!-- ---Nosotros--- -->
             <div class="mr-md-3 pt-3 px-3 pt-md-5 px-md-5 m-md-3 py-5 nosotros">
-                <div class="my-3 py-3"><a class="link" href="./pages/información_empresa.html">
+                <div class="my-3 py-3"><a class="link" href="/pages/información_empresa.html">
                         <h2 class="opcion">NOSOTROS</h2>
                         <p class="h3">COMPROMETIDOS CONTIGO, SIEMPRE A TU LADO</p>
                 </div>
@@ -104,7 +104,7 @@
                         <div class="carousel-inner">
                             <!-- ---Primer Item del Carrusel--- -->
                             <div class="carousel-item active">
-                                <img src="./assets/imgs/tendencias/animeEffect.jpg" class="d-block w-100 tendencia"
+                                <img src="/assets/imgs/tendencias/animeEffect.jpg" class="d-block w-100 tendencia"
                                     alt="Slide 1">
                                 <div class="carousel-caption d-none d-sm-block">
                                     <h3>Anime Effect</h3>
@@ -113,7 +113,7 @@
                             </div>
                             <!-- ---Segundo Item del Carrusel--- -->
                             <div class="carousel-item">
-                                <img src="./assets/imgs/tendencias/sirena.jpg" class="d-block w-100 tendencia"
+                                <img src="/assets/imgs/tendencias/sirena.jpg" class="d-block w-100 tendencia"
                                     alt="Slide 2">
                                 <div class="carousel-caption d-none d-sm-block">
                                     <h3>Lashes Sirena</h3>
@@ -122,7 +122,7 @@
                             </div>
                             <!-- ---Tercer Item del carrusel--- -->
                             <div class="carousel-item">
-                                <img src="./assets/imgs/tendencias/colorManLashes.jpg" class="d-block w-100 tendencia"
+                                <img src="/assets/imgs/tendencias/colorManLashes.jpg" class="d-block w-100 tendencia"
                                     alt="Slide 3">
                                 <div class="carousel-caption d-none d-sm-block">
                                     <h3>Full fantasy</h3>
@@ -131,7 +131,7 @@
                             </div>
                             <!-- ---Cuarto Item del Carrusel--- -->
                             <div class="carousel-item">
-                                <img src="./assets/imgs/tendencias/foxy.jpg" class="d-block w-100 tendencia"
+                                <img src="/assets/imgs/tendencias/foxy.jpg" class="d-block w-100 tendencia"
                                     alt="Slide 4">
                                 <div class="carousel-caption d-none d-sm-block">
                                     <h3>Foxy eyes</h3>
@@ -140,7 +140,7 @@
                             </div>
                             <!-- ---Quinto Item del Carrusel--- -->
                             <div class="carousel-item">
-                                <img src="./assets/imgs/tendencias/neonLashes.jpg" class="d-block w-100 tendencia"
+                                <img src="/assets/imgs/tendencias/neonLashes.jpg" class="d-block w-100 tendencia"
                                     alt="Slide 5">
                                 <div class="carousel-caption d-none d-sm-block">
                                     <h3>NeonLashes</h3>
