--- a/pages/productos.html
+++ b/pages/productos.html
@@ -227,7 +227,7 @@
 <!----------------------------------Fin footer------------------------------------------------->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"crossorigin="anonymous"></script>
-  <script src="/pages/Navbar.html"></script>
+  <script src="/pages/Navbar.js"></script>
   <script src="../src/Footer.js"></script>
 <script src="/src/carrito.js"></script>
 
