--- a/pages/Footer.html
+++ b/pages/Footer.html
@@ -29,7 +29,7 @@
           <div class="col-3">
             <h5>Quick Links</h5>
             <ul class="list-unstyled text-small">
-              <li><a class="link-secondary text-decoration-none text-light" href="../Pages/cita.html" target="_blank">Citas</a></li>
+              <li><a class="link-secondary text-decoration-none text-light" href="../pages/cita.html" target="_blank">Citas</a></li>
               <li><a class="link-secondary text-decoration-none text-light" href="/assets/docs/Ficha_del_cliente.pdf" target="_blank">Ficha</a></li>
               <li><a class="link-secondary text-decoration-none text-light" href="/assets/docs/Consentimiento_informado.pdf" target="_blank">Consentimiento</a></li>
             </ul>
@@ -37,9 +37,9 @@
           <div class="col-3">
             <h5>About</h5>
             <ul class="list-unstyled text-small">
-              <li><a class="link-secondary text-decoration-none text-light" href="/Pages/información_empresa.html">Sobre Nosotros<i class="bi bi-info"></i></a></li>
-              <li><a class="link-secondary text-decoration-none text-light" href="/Pages/sobre_nosotros.html">Developer Team<i class="bi bi-people-fill"></i></a></li>
-              <li><a class="link-secondary text-decoration-none text-light" href="/Pages/garantias.html">Garantías <i class="bi bi-file-earmark-fill"></i></a></li>
+              <li><a class="link-secondary text-decoration-none text-light" href="/pages/información_empresa.html">Sobre Nosotros<i class="bi bi-info"></i></a></li>
+              <li><a class="link-secondary text-decoration-none text-light" href="/pages/sobre_nosotros.html">Developer Team<i class="bi bi-people-fill"></i></a></li>
+              <li><a class="link-secondary text-decoration-none text-light" href="/pages/garantias.html">Garantías <i class="bi bi-file-earmark-fill"></i></a></li>
             </ul>
           </div>
         </div>
