:3 iber seal of aproval

--- a/pages/inicio_sesion.html
+++ b/pages/inicio_sesion.html
@@ -64,7 +64,7 @@
                         </div>
                         <hr class="my-4">
                         <br>
-                        <a id="enlaceGarantias" href="../Pages/garantias.html">Al hacer clic en Registrarse, acepta los términos de uso.</a>
+                        <a id="enlaceGarantias" href="../pages/garantias.html">Al hacer clic en Registrarse, acepta los términos de uso.</a>
                         <p class="warnings" id="warnings"></p>
                     </form>
                 </div>
