--- a/pages/registrarse.html
+++ b/pages/registrarse.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="../assets/imgs/logos/logoOjo.png">
-    <link rel="stylesheet" href="/Styles/registrarse.css">
+    <link rel="stylesheet" href="/styles/registrarse.css">
     <title>Registrate</title>
 </head>
 <body id="body">
@@ -16,7 +16,7 @@
             <div class="card-title">
                 <p>Regístrate para comprar o agendar</p>
             </div>
-             <!--Contenedor del cuerpo de la tarjeta-->
+            <!--Contenedor del cuerpo de la tarjeta-->
             <div class="card-body">
                 <!--inicio de formulario-->
                 <form id= "registrarse" action="/index.html">
