:3 iber seal of aproval

--- a/pages/cuenta_admin.html
+++ b/pages/cuenta_admin.html
@@ -46,7 +46,7 @@
             <div> <span class="titulos">Agregar</span></div>
             Agrega más artículos, marcas o categorías
           </div>
-          <a class="badge bg-dark rounded-pill text-decoration-none" href="/Pages/registros_pmc.html">></a>
+          <a class="badge bg-dark rounded-pill text-decoration-none" href="/pages/registros_pmc.html">></a>
         </li>
 
         <li class="list-group-item d-flex justify-content-between align-items-start">
@@ -57,7 +57,7 @@
             <div ><span class="titulos">Historial de ventas</span></div>
             Checa tus ventas
           </div>
-          <a class="badge bg-dark rounded-pill text-decoration-none" href="/Pages/historial_ventas.html">></a>
+          <a class="badge bg-dark rounded-pill text-decoration-none" href="/pages/historial_ventas.html">></a>
         </li>
 
         <li class="list-group-item d-flex justify-content-between align-items-start">
@@ -68,7 +68,7 @@
             <div ><span class="titulos">Envíos</span></div>
             Gestiona tus envíos
           </div>
-          <a class="badge bg-dark rounded-pill text-decoration-none" href="/Pages/control_de_pedidos.html">></a>
+          <a class="badge bg-dark rounded-pill text-decoration-none" href="/pages/control_de_pedidos.html">></a>
         </li>
 
         <li class="list-group-item d-flex justify-content-between align-items-start">
@@ -79,7 +79,7 @@
             <div ><span class="titulos">Clientes</span></div>
             Gestiona a tus clientes
           </div>
-          <a class="badge bg-dark rounded-pill text-decoration-none" href="/Pages/lista_usuarios.html">></a>
+          <a class="badge bg-dark rounded-pill text-decoration-none" href="/pages/lista_usuarios.html">></a>
         </li>
 
         <li class="list-group-item d-flex justify-content-between align-items-start">
@@ -90,7 +90,7 @@
             <div><span class="titulos">Citas</span></div>
             Gestiona tus citas pendientes
           </div>
-          <a class="badge bg-dark rounded-pill text-decoration-none" href="/Pages/control_citas.html">></a>
+          <a class="badge bg-dark rounded-pill text-decoration-none" href="/pages/control_citas.html">></a>
         </li>
 
       </ol>
