--- a/pages/lista_usuarios.html
+++ b/pages/lista_usuarios.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/assets/imgs/logoOjo.png" sizes="32x32" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-        <link rel="stylesheet" href="/Styles/lista_Usuarios.css">
+        <link rel="stylesheet" href="/styles/lista_Usuarios.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Fav icon -->
