--- a/pages/registrarse.html
+++ b/pages/registrarse.html
@@ -62,7 +62,7 @@
             <div id="footerContainer"></div>
         </footer>
 
-        <script src="/src/registrarse.js"></script>
+        <script src="../src/registrarse.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
