se actualizan el carrito y el checkout uwu :3

--- a/pages/historial_ventas.html
+++ b/pages/historial_ventas.html
@@ -25,12 +25,11 @@
     <!--Contenido-->
     <div class="contenido">
         <h1>Historial De Ventas</h1>
-        <!--Filtros-->
         <div class="container-fluid"> 
         <!-- Por consulta -->
-            <div class = "col-1">
+            <!-- <div class = "col-1">
                 <input class="busqueda" type="text" placeholder="Buscar">
-            </div>
+            </div> -->
         </div>
     
     <br>
