--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="icon" href="../assets/imgs/logos/logoOjo.png" sizes="32x32" type="image/png">
-    <link rel="stylesheet" href="../styles/checkout.css">
+    <link rel="stylesheet" href="../Styles/checkout.css">
     <meta charset="UTF  -8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout</title>
@@ -31,14 +31,9 @@
                         </ol>
                     </div>
                     <div>
+        <br>
+            <h3 class="text-center" id="total">Total: </h3>  <br> 
 
-            <h2>Resumen de la órden</h2>  <br> 
-                    <div class="resumenPedido">
-                        <div class="container-fluid " id="listaResumen">
-                            <ol class="list-group list-group-numbered" >
-                            </ol>
-                        </div>
-                    </div>
             </div>
                     <br>
         
