--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -3,8 +3,8 @@
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="icon" href="../assets/imgs/logos/logoOjo.png" sizes="32x32" type="image/png">
-    <link rel="stylesheet" href="../Styles/checkout.css">
-    <meta charset="UTF  -8">
+    <link rel="stylesheet" href="/styles/checkout.css">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout</title>
 </head>
@@ -79,7 +79,7 @@
             <br>
 
             <div class="botonConfirmación"> 
-                <a href="/Pages/checkout.html" class="btn btn-dark " id="irCheckout" role="button">Confirmar compra</a>
+                <a href="/pages/checkout.html" class="btn btn-dark " id="irCheckout" role="button">Confirmar compra</a>
             </div>
             <br>
         </div>
