mensaje modal en checkout uwu

--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -78,9 +78,31 @@
             </div>
             <br>
 
-            <div class="botonConfirmación"> 
-                <a href="/pages/checkout.html" class="btn btn-dark " id="irCheckout" role="button">Confirmar compra</a>
+
+            <div class="dropdown" style="position: relative;">
+
+
+                    <!-- Button trigger modal -->
+<button  class="btn btn-dark botonConfirmación" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    Confirmar compra.
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+    <div class="modal-content">
+        <div class="modal-body">
+            <h2 style="text-align: center; ">Transacción exitosa.</h2>
+            
+            <!-- <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Cerrar</button> -->
+        </div>
+    </div>
+    </div>
+</div>
+
+
             </div>
+
             <br>
         </div>
         </div>
