--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -88,7 +88,7 @@
 </button>
 
 <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" style="margin-top: 300px;">
     <div class="modal-dialog">
     <div class="modal-content">
         <div class="modal-body">
