--- a/pages/registrarse.html
+++ b/pages/registrarse.html
@@ -19,7 +19,7 @@
             <!--Contenedor del cuerpo de la tarjeta-->
             <div class="card-body">
                 <!--inicio de formulario-->
-                <form id= "registrarse" action="/index.html">
+                <form id= "registrarse">
                     <!--Contenedor de etiqueta e input de nombre-->
                     <div class="container">
                         <label class="form-label" for="nombre">Nombre</label>
