:3 iber seal of aproval

--- a/pages/cita.html
+++ b/pages/cita.html
@@ -82,7 +82,7 @@
 
 					</form>
 					<br>
-					<button id="guardar-btn" type="button" class="btn btn-dark">Guardar</button>
+					<button id="guardar-btn" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="btn btn-dark">Guardar</button>
 
 					<button type="submit" class="btn btn-danger">Cancelar</button>
 
@@ -92,7 +92,12 @@
 
 		<!--=======================FIN FORMULARIO=======================-->
 
-
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" style="margin-top: 300px;">
+    <div class="modal-dialog">
+    <div class="modal-content">
+        <div class="modal-body">
+            <h2 style="text-align: center; ">Cita Realizada</h2>
 
 
 		<!--=======================INICIO FOOTER=======================-->
