--- a/pages/cuenta_usuario.html
+++ b/pages/cuenta_usuario.html
@@ -37,7 +37,7 @@
               <i class="bi bi-person"></i>
             </div>            
             <div class="ms-2 me-auto text-center">
-              <p id="usuario" class="fw-bold">¡Hola Usuario!</p>
+              <p id="usuario" class="fw-bold">¡Hola Carmen!</p>
               Estos son tus datos
             </div>
           </li>    
