:3 iber seal of aproval

--- a/pages/estatus_envio.html
+++ b/pages/estatus_envio.html
@@ -135,6 +135,28 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-6 mb-4">
+                <div class="card3">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="../assets/serviciosImg/removedorcrema1.png" class="card-img-top" alt="Imagen del producto 4">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Pluma de gel removedor</h5>
+                                <!-- <p class="card-text">Descripción breve del producto 4.</p> -->
+                                <ul class="list-group">
+                                    <li class="list-group-item">Estado:
+                                        <span class="badge bg-warning">En proceso</span>
+                                    </li>
+                                    <li class="list-group-item">Fecha de entrega: En proceso</li>
+                                    <li class="list-group-item">Número de seguimiento: En proceso</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>  
         </section>
