--- a/pages/cita.html
+++ b/pages/cita.html
@@ -98,7 +98,7 @@
     <div class="modal-content">
         <div class="modal-body">
             <h2 style="text-align: center; ">Cita Realizada</h2>
-
+		</div></div></div>
 
 		<!--=======================INICIO FOOTER=======================-->
 		<footer id="footer" class="footer">
