:3 iber seal of aproval

--- a/pages/cita.html
+++ b/pages/cita.html
@@ -101,9 +101,9 @@
 		</div></div></div>
 
 		<!--=======================INICIO FOOTER=======================-->
-		<footer id="footer" class="footer">
+		<!-- <footer id="footer" class="footer">
 			<div id="footerContainer"></div>
-		</footer>
+		</footer> -->
 		<!--=======================FIN FOOTER=======================-->
 
 </body>
@@ -116,7 +116,7 @@
 		crossorigin="anonymous"></script>
 
 	<script src="../src/Navbar.js"></script>
-	<script src="../src/Footer.js"></script>
+	<!-- <script src="../src/Footer.js"></script> -->
 
 </body>
 
