:3 iber seal of aproval

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -51,7 +51,7 @@
                                 <div class="d-flex justify-content-between align-items-center">
                                     
 <div id="Botones" class="btn-group">
-                                        <a id="titulo2" class="btn btn-outline-dark" href="/Pages/cita.html">Haz tu
+                                        <a id="titulo2" class="btn btn-outline-dark" href="/pages/cita.html">Haz tu
                                             cita</a>
                                         <button id="titulo2" type="button" class="btn btn-sm btn-dark">Tiempo estimado 2
                                             hrs.</button>
@@ -74,7 +74,7 @@
                                     aparentar más volumen de pestañas.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div id="Botones" class="btn-group">
-                                        <a id="titulo2" class="btn btn-outline-dark" href="/cita.html">Haz tu
+                                        <a id="titulo2" class="btn btn-outline-dark" href="/pages/cita.html">Haz tu
                                             cita</a>
                                         <button id="titulo2" type="button" class="btn btn-sm btn-dark">Tiempo estimado 2.5
                                             hrs </button>
@@ -97,7 +97,7 @@
                                     que busquen profundamente en la mirada.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div id="Botones"  class="btn-group">
-                                        <a id="titulo2" class="btn btn-outline-dark" href="/cita.html">Haz tu
+                                        <a id="titulo2" class="btn btn-outline-dark" href="/pages/cita.html">Haz tu
                                             cita</a>
                                         <button id="titulo2" type="button" class="btn btn-sm btn-dark">Tiempo estimado 3
                                             hrs.</button>
@@ -120,7 +120,7 @@
                                     .</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div id="Botones" class="btn-group">
-                                        <a id="titulo2" class="btn btn-outline-dark" href="/cita.html">Haz tu
+                                        <a id="titulo2" class="btn btn-outline-dark" href="/pages/cita.html">Haz tu
                                             cita</a>
                                         <button id="titulo2" type="button" class="btn btn-sm btn-dark">Tiempo estimado 3
                                             hrs.</button>
@@ -141,7 +141,7 @@
                                     pestaña natural.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div id="Botones"  class="btn-group">
-                                        <a id="titulo2" class="btn btn-outline-dark" href="/cita.html">Haz tu
+                                        <a id="titulo2" class="btn btn-outline-dark" href="/pages/cita.html">Haz tu
                                             cita</a>
                                         <button id="titulo2" type="button" class="btn btn-sm btn-dark">Tiempo estimado 1.5
                                             hrs</button>
@@ -164,7 +164,7 @@
                                     último servicio.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div id="Botones"  class="btn-group">
-                                        <a id="titulo2" class="btn btn-outline-dark" href="/cita.html">Haz tu
+                                        <a id="titulo2" class="btn btn-outline-dark" href="/pages/cita.html">Haz tu
                                             cita</a>
                                         <button id="titulo2" type="button" class="btn btn-sm btn-dark">Tiempo estimado 1.5
                                             hrs</button>
