--- a/pages/lista_citas_usuario.html
+++ b/pages/lista_citas_usuario.html
@@ -21,10 +21,7 @@
     <!--=======================FIN NAVBAR=======================-->
     <main>
 
-        <!--=======================INICIO LISTA=======================-->
-
-
-
+        <!--=======================INICIO DE TARJETA CON LA LISTA=======================-->
         <div id="tarjeta" class="contenido">
             <div id="contendorLista" class="carta-body">
                 <h5 class="carta-title">Citas agendadas</h5>
@@ -33,12 +30,9 @@
                     
                 </ol>
                 <br>
-                <!-- <a href="cita.html" class="btn btn-dark">Agendar nueva cita</a> -->
-
             </div>
         </div>
-
-        <!--=======================FIN LISTA=======================-->
+        <!--=======================FIN DE TARJETA CON LA LISTA=======================-->
 
 
 
