--- a/pages/registrarse.html
+++ b/pages/registrarse.html
@@ -52,20 +52,8 @@
                     </div>
                     <br>
                     <!--Contenedor de botón submit-->
-                    <input id="submit-btn" type="submit"  value="Crear cuenta" data-bs-toggle="modal" data-bs-target="#exampleModal" >
+                    <input id="submit-btn" type="submit"  value="Crear cuenta"  data-bs-toggle="modal" data-bs-target="#exampleModal" >
                 </form>
-            </div>
-        </div>
-        <!-- Modal -->
-        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" style="margin-top: 300px;">
-            <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <h2 style="text-align: center; ">Registro exitoso.</h2>
-                    
-                    <!-- <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Cerrar</button> -->
-                </div>
-            </div>
             </div>
         </div>
 
@@ -74,6 +62,7 @@
         </footer>
 
         <script src="/src/registrarse.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
