--- a/pages/registrarse.html
+++ b/pages/registrarse.html
@@ -52,7 +52,7 @@
                     </div>
                     <br>
                     <!--Contenedor de botón submit-->
-                    <input id="submit-btn" type="submit"  value="Crear cuenta"  data-bs-toggle="modal" data-bs-target="#exampleModal" >
+                    <button id="btn" onclick="agregarUsuario ()">Crear cuenta</button>
                 </form>
             </div>
         </div>
