--- a/pages/registrarse.html
+++ b/pages/registrarse.html
@@ -51,9 +51,9 @@
                         <input class="form-control" id="contraseña" minlength="6" maxlength="16" type="password" placeholder="Al menos 6 caracteres" required>
                     </div>
                     <br>
-                    <!--Contenedor de botón submit-->
-                    <button id="btn" onclick="agregarUsuario ()">Crear cuenta</button>
                 </form>
+                  <!--botón submit-->
+                  <button id="btn" onclick="agregarUsuario ()">Crear cuenta</button>
             </div>
         </div>
 
